--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -69,7 +69,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 114
+     "prompt_number": 138
     },
     {
      "cell_type": "markdown",
@@ -115,7 +115,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 115
+     "prompt_number": 142
     },
     {
      "cell_type": "markdown",
@@ -130,20 +130,45 @@
      "collapsed": false,
      "input": [
       "with open(\"../data/eeg_sample/20101214163931.a.combined.csv\", 'rb') as fi,\\\n",
-      "open(\"preprocess/task_xls_labels.csv\", 'rb') as fi2,\\\n",
+      "open(\"preprocess/task_xls_labels_compress.csv\", 'rb') as fi2,\\\n",
       "open(\"preprocess/combined_label.csv\", 'w') as fo:\n",
-      "    fr = csv.reader(fi, delimiter=',')\n",
-      "    fr2 = csv.reader(fi2, delimiter='\\t')\n",
-      "    fw = csv.writer(fo, delimiter='\\t')\n",
+      "    \n",
+      "    day = '2010-12-14' #later, parse from file name\n",
+      "    fr1 = csv.reader(fi,  delimiter=',') # combined.csv\n",
+      "    fr2 = csv.reader(fi2, delimiter='\\t')# labels_compress.csv\n",
+      "    fw  = csv.writer(fo,  delimiter='\\t')# combined_label.csv\n",
       "    \n",
       "    #headers\n",
-      "    fw.writerow(next(fr, None) + ['Label'])\n",
-      "    next(fr2, None)"
+      "    fw.writerow(next(fr1, None) + ['Difficulty'])\n",
+      "    next(fr2, None)\n",
+      "    \n",
+      "    lab_row = fr2.next()\n",
+      "    for row in fr1:\n",
+      "        row[0] = datetime.strptime(day+' '+row[0]+'.0',\\\n",
+      "                        '%Y-%m-%d %H:%M:%S.%f').strftime('%s.%f')\n",
+      "        if Decimal(row[0]) < Decimal(lab_row[0]): # t < start_time\n",
+      "            label = -1\n",
+      "            fw.writerow(row + [label])\n",
+      "            continue\n",
+      "            \n",
+      "        if Decimal(row[0]) < Decimal(lab_row[1]): # t < end_time\n",
+      "            label = lab_row[2]\n",
+      "            fw.writerow(row + [label])\n",
+      "            continue\n",
+      "        \n",
+      "        while Decimal(row[0] > lab_row[1]): # t > end_time\n",
+      "            try:\n",
+      "                lab_row = next(fr2)\n",
+      "                label = lab_row[2]\n",
+      "            except: # reached end of file\n",
+      "                label = -1\n",
+      "                break\n",
+      "        fw.writerow(row + [label])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 117
+     "prompt_number": 141
     }
    ],
    "metadata": {}
