--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -238,11 +238,81 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Create file with incremental miliseconds\n"
+      "# Create raw file with incremental miliseconds\n",
+      "with open(\"../data/eeg_sample/20101214163931.a.rawwave.csv\",'rb') as fi,\\\n",
+      "open(\"preprocess/raw_incremental.csv\",'w') as fo:\n",
+      "    fr = csv.reader(fi, delimiter=',')\n",
+      "    fw = csv.writer(fo, delimiter=',')\n",
+      "    \n",
+      "    fw.writerow(next(fr))#header\n",
+      "    \n",
+      "    c=0.0\n",
+      "    prev_time = '100'#dummy\n",
+      "    for row in fr:\n",
+      "        if row[0]==prev_time:\n",
+      "            c = c + 0.001\n",
+      "        else:\n",
+      "            c = 0.0\n",
+      "            prev_time = row[0]\n",
+      "        fw.writerow([row[0] + '.' + str(c).split('.')[1], row[1]])\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 211
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def label_data_raw_signal(in_file, compressed_label_file, out_file):\n",
+      "    with open(in_file, 'rb') as fi,\\\n",
+      "    open(compressed_label_file, 'rb') as fi2,\\\n",
+      "    open(out_file, 'w') as fo:\n",
+      "        \n",
+      "        day = '2010-12-14' #later, parse from file name\n",
+      "        fr1 = csv.reader(fi,  delimiter=',') # combined.csv\n",
+      "        fr2 = csv.reader(fi2, delimiter='\\t')# labels_compress.csv\n",
+      "        fw  = csv.writer(fo,  delimiter='\\t')# combined_label.csv\n",
+      "        \n",
+      "        #headers\n",
+      "        fw.writerow(next(fr1, None) + ['Difficulty'])\n",
+      "        next(fr2, None)\n",
+      "        \n",
+      "        lab_row = fr2.next()\n",
+      "        for row in fr1:\n",
+      "            #print row[0]\n",
+      "            #print day+' '+row[0]\n",
+      "            row[0] = datetime.strptime(day+' '+row[0],\\\n",
+      "                            '%Y-%m-%d %H:%M:%S.%f').strftime('%s.%f')\n",
+      "            if Decimal(row[0]) < Decimal(lab_row[0]): # t < start_time\n",
+      "                label = -1\n",
+      "                fw.writerow(row + [label])\n",
+      "                continue\n",
+      "                \n",
+      "            if Decimal(row[0]) < Decimal(lab_row[1]): # t < end_time\n",
+      "                label = lab_row[2]\n",
+      "                fw.writerow(row + [label])\n",
+      "                continue\n",
+      "            \n",
+      "            while Decimal(row[0] > lab_row[1]): # t > end_time\n",
+      "                try:\n",
+      "                    lab_row = next(fr2)\n",
+      "                    label = lab_row[2]\n",
+      "                except: # reached end of file\n",
+      "                    label = -1\n",
+      "                    break\n",
+      "            fw.writerow(row + [label])\n",
+      "    return\n",
+      "\n",
+      "label_data_raw_signal(\"preprocess/raw_incremental.csv\",\n",
+      "            \"preprocess/task_xls_labels_compress.csv\",\n",
+      "            \"preprocess/raw_incremental_label.csv\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 212
     }
    ],
    "metadata": {}
