Added line numbers to labels, label_compress

--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 193
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -64,18 +64,19 @@
       "        fw = csv.writer(fo, delimiter='\\t')\n",
       "        \n",
       "        h = fr.next()\n",
-      "        fw.writerow([h[2], h[3], h[-1]]) #header\n",
-      "        for row in fr:\n",
+      "        fw.writerow(['taskid',h[2], h[3], h[-1]]) #header\n",
+      "        \n",
+      "        for idx, row in enumerate(fr):\n",
       "            row[2] = format_time(row[2])\n",
       "            row[3] = format_time(row[3])\n",
-      "            fw.writerow([row[2], row[3], row[-1]])\n",
+      "            fw.writerow([idx, row[2], row[3], row[-1]])\n",
       "\n",
       "format_task_xls()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 144
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -101,19 +102,21 @@
       "        fw.writerow(fr.next()) #header\n",
       "        \n",
       "        row1 = fr.next()\n",
-      "        t_s = row1[0]\n",
-      "        t_e = row1[1]\n",
-      "        lab = row1[2]\n",
+      "        t_id =row1[0]\n",
+      "        t_s = row1[1]\n",
+      "        t_e = row1[2]\n",
+      "        lab = row1[3]\n",
       "        \n",
       "        for row in fr: #row 2 onwards\n",
-      "            if row[2] == lab:\n",
-      "                t_e = row[1]\n",
+      "            if row[3] == lab:\n",
+      "                t_e = row[2]\n",
       "            else:\n",
-      "                fw.writerow([str(t_s), str(t_e), lab])\n",
-      "                t_s = row[0]\n",
-      "                t_e = row[1]\n",
-      "                lab = row[2]\n",
-      "        fw.writerow([str(t_s), str(t_e), lab]) #last row\n",
+      "                fw.writerow([str(t_id),str(t_s), str(t_e), lab])\n",
+      "                t_id =row[0]\n",
+      "                t_s = row[1]\n",
+      "                t_e = row[2]\n",
+      "                lab = row[3]\n",
+      "        fw.writerow([str(t_id),str(t_s), str(t_e), lab]) #last row\n",
       "                \n",
       "\n",
       "compress_time_labels(\"./preprocess/task_xls_labels.csv\")"
@@ -121,7 +124,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 145
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
