Added config params to eeg_data

--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -27,6 +27,23 @@
      "prompt_number": 1
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Import config params\n",
+      "DATA_URL = ''\n",
+      "OUT_URL = ''\n",
+      "try:\n",
+      "   from dev_settings import *\n",
+      "except ImportError:\n",
+      "   pass"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
