--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -106,8 +106,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Filters and Power Spectrum\n",
-      "#### Designing Butterford Filter"
+      "## Filters and Power Spectrum\n",
+      "### Designing Butterworth Filter"
      ]
     },
     {
@@ -162,7 +162,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Filtering our Signal\n",
+      "### Filtering our Signal\n",
       "The band pass filter is used to filter the signal"
      ]
     },
@@ -196,6 +196,27 @@
       }
      ],
      "prompt_number": 228
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "###Power Spectrum\n",
+      "#### Computing Power in each frequency bin"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pyeeg\n",
+      "\n",
+      "a = pyeeg.bin_power(data_filtered[0:1000], [0.5,4,7,12,30],512)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 253
     }
    ],
    "metadata": {}
