More generic task_xls_labels.csv

--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -61,6 +61,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "print DATA_URL\n",
+      "print SAVE_URL"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/home/sagar/Dropbox/Academics/nc_EDM/eeg_project/data/all\n",
+        "/home/sagar/Dropbox/Academics/nc_EDM/eeg_project/edm_eeg.git/preprocess/all\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "def format_time(ti):\n",
       "    \"\"\"\n",
       "    Converts format '2010-12-14 16:56:36.996' to Decimal\n",
@@ -72,8 +93,8 @@
       "    \n",
       "    \n",
       "def format_task_xls():\n",
-      "    path_task_xls = \"../data/eeg_sample/task.xls\"\n",
-      "    path_task_xls_labels = \"./preprocess/task_xls_labels.csv\"\n",
+      "    path_task_xls = DATA_URL + \"/task.xls\"\n",
+      "    path_task_xls_labels = SAVE_URL + \"/task_xls_labels.csv\"\n",
       "    \n",
       "    with open(path_task_xls, 'rb') as fi,\\\n",
       "    open(path_task_xls_labels, 'w') as fo:\n",
@@ -81,19 +102,19 @@
       "        fw = csv.writer(fo, delimiter='\\t')\n",
       "        \n",
       "        h = fr.next()\n",
-      "        fw.writerow(['taskid',h[2], h[3], h[-1]]) #header\n",
+      "        fw.writerow(['taskid',h[0], h[1], h[2], h[3], h[-1]]) #header\n",
       "        \n",
       "        for idx, row in enumerate(fr):\n",
       "            row[2] = format_time(row[2])\n",
       "            row[3] = format_time(row[3])\n",
-      "            fw.writerow([idx, row[2], row[3], row[-1]])\n",
+      "            fw.writerow([idx, row[0], row[1], row[2], row[3], row[-1]])\n",
       "\n",
       "format_task_xls()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -142,6 +163,21 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Find out the subjects"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
