labelled files getting created but incorrect

--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -168,16 +168,26 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Find out the subjects"
+      "### Find out the Subject IDs and Time of experiment"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "from os import listdir\n",
+      "from os.path import isfile, join\n",
+      "import re\n",
+      "\n",
+      "onlyfiles = [ f for f in listdir(DATA_URL) if isfile(join(DATA_URL,f)) ]\n",
+      "pat = re.compile(\"[0-9]*\\.[0-9]*\\.combined\\.csv\")\n",
+      "temp_dat = [f.split('.')[0:2] for f in onlyfiles if p.match(f)]\n",
+      "sub_dict = {i[1]: i[0] for i in temp_dat}"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -191,12 +201,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def label_data(in_file, out_file, compressed_label_file):\n",
+      "dbg=True\n",
+      "\n",
+      "def label_data(in_file, out_file, compressed_label_file,\n",
+      "            subj_t, time_t):\n",
+      "    if dbg: print \"Subject: \" + subj_t\n",
+      "    \n",
       "    with open(in_file, 'rb') as fi,\\\n",
       "    open(out_file, 'rb') as fi2,\\\n",
       "    open(compressed_label_file, 'w') as fo:\n",
       "        \n",
-      "        day = '2010-12-14' #later, parse from file name\n",
+      "        day = time_t[0:4]+\"-\"+time_t[4:6]+\"-\"+time_t[6:8]\n",
       "        fr1 = csv.reader(fi,  delimiter=',') # combined.csv\n",
       "        fr2 = csv.reader(fi2, delimiter='\\t')# xls_labels.csv\n",
       "        fw  = csv.writer(fo,  delimiter='\\t')# combined_label_uncompress.csv\n",
@@ -205,17 +220,21 @@
       "        fw.writerow(next(fr1, None) + ['Difficulty', 'taskid'] )\n",
       "        next(fr2, None)\n",
       "        \n",
+      "        #forward till subject data starts\n",
       "        lab_row = fr2.next()\n",
+      "        while subj_t != lab_row[2]:\n",
+      "            lab_row = fr2.next()\n",
+      "        \n",
       "        for row in fr1:\n",
       "            row[0] = datetime.strptime(day+' '+row[0]+'.0',\\\n",
       "                            '%Y-%m-%d %H:%M:%S.%f').strftime('%s.%f')\n",
-      "            if Decimal(row[0]) < Decimal(lab_row[1]): # t < start_time\n",
+      "            if Decimal(row[0]) < Decimal(lab_row[3]): # t < start_time\n",
       "                label = -1\n",
       "                fw.writerow(row + [label, lab_row[0]])\n",
       "                continue\n",
       "                \n",
-      "            if Decimal(row[0]) < Decimal(lab_row[2]): # t < end_time\n",
-      "                label = lab_row[3]\n",
+      "            if Decimal(row[0]) < Decimal(lab_row[4]): # t < end_time\n",
+      "                label = lab_row[5]\n",
       "                fw.writerow(row + [label, lab_row[0]])\n",
       "                continue\n",
       "            \n",
@@ -223,20 +242,182 @@
       "                try:\n",
       "                    lab_row = next(fr2)\n",
       "                    label = lab_row[3]\n",
-      "                except: # reached end of file\n",
+      "                    if lab_row[2] != subj_t:\n",
+      "                        raise Exception(\"Reached end of data for subject\" + subj_t)\n",
+      "                except Exception as e: # reached end of file, or next subject\n",
       "                    label = -1\n",
+      "                    if dbg: print e\n",
       "                    break\n",
       "            fw.writerow(row + [label,lab_row[0]])\n",
       "    return\n",
       "\n",
-      "label_data(\"../data/eeg_sample/20101214163931.a.combined.csv\",\n",
-      "            \"preprocess/task_xls_labels.csv\",\n",
-      "            \"preprocess/combined_label_uncompress.csv\")"
+      "for i in sub_dict:\n",
+      "    label_data(DATA_URL + \"/\"+sub_dict[i] + \".\" +i+\".combined.csv\",\n",
+      "            SAVE_URL + \"/task_xls_labels.csv\",\n",
+      "            SAVE_URL + \"/\"+sub_dict[i] + \".\" +i+\".labelled.csv\",\n",
+      "            i, sub_dict[i])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Subject: 24\n",
+        "Subject: 25"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 13"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 27"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 20"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 21\n",
+        "Subject: 17"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 23\n",
+        "Subject: 19"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 18"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 30"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 28"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 29"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 26"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 1"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Reached end of data for subject1\n",
+        "Subject: 12"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Reached end of data for subject12\n",
+        "Subject: 5"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 4"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 7"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 9"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Subject: 10"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Reached end of data for subject10\n"
+       ]
+      }
+     ],
+     "prompt_number": 52
     },
     {
      "cell_type": "markdown",
