Successfully generating all labelled files

--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -201,11 +201,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dbg=True\n",
+      "dbg=False\n",
       "\n",
       "def label_data(in_file, out_file, compressed_label_file,\n",
       "            subj_t, time_t):\n",
-      "    if dbg: print \"Subject: \" + subj_t\n",
+      "    if dbg: print \"#\"+subj_t + \"--------\"\n",
       "    \n",
       "    with open(in_file, 'rb') as fi,\\\n",
       "    open(out_file, 'rb') as fi2,\\\n",
@@ -216,6 +216,8 @@
       "        fr2 = csv.reader(fi2, delimiter='\\t')# xls_labels.csv\n",
       "        fw  = csv.writer(fo,  delimiter='\\t')# combined_label_uncompress.csv\n",
       "        \n",
+      "        if dbg: print \"day: \" + day\n",
+      "        \n",
       "        #headers\n",
       "        fw.writerow(next(fr1, None) + ['Difficulty', 'taskid'] )\n",
       "        next(fr2, None)\n",
@@ -224,24 +226,27 @@
       "        lab_row = fr2.next()\n",
       "        while subj_t != lab_row[2]:\n",
       "            lab_row = fr2.next()\n",
+      "        if dbg: print \"start: \" + str(lab_row[0])\n",
       "        \n",
-      "        for row in fr1:\n",
+      "        for idx, row in enumerate(fr1):\n",
       "            row[0] = datetime.strptime(day+' '+row[0]+'.0',\\\n",
       "                            '%Y-%m-%d %H:%M:%S.%f').strftime('%s.%f')\n",
       "            if Decimal(row[0]) < Decimal(lab_row[3]): # t < start_time\n",
+      "                if dbg: print str(idx)+\": t<start_time\"\n",
       "                label = -1\n",
       "                fw.writerow(row + [label, lab_row[0]])\n",
       "                continue\n",
       "                \n",
-      "            if Decimal(row[0]) < Decimal(lab_row[4]): # t < end_time\n",
+      "            if Decimal(row[0]) <= Decimal(lab_row[4]): # t <= end_time\n",
+      "                if dbg: print str(idx)+\": t <= end_time\"\n",
       "                label = lab_row[5]\n",
       "                fw.writerow(row + [label, lab_row[0]])\n",
       "                continue\n",
       "            \n",
-      "            while Decimal(row[0] > lab_row[2]): # t > end_time\n",
+      "            while Decimal(row[0] > lab_row[4]): # t > end_time\n",
       "                try:\n",
       "                    lab_row = next(fr2)\n",
-      "                    label = lab_row[3]\n",
+      "                    label = lab_row[5]\n",
       "                    if lab_row[2] != subj_t:\n",
       "                        raise Exception(\"Reached end of data for subject\" + subj_t)\n",
       "                except Exception as e: # reached end of file, or next subject\n",
@@ -249,6 +254,8 @@
       "                    if dbg: print e\n",
       "                    break\n",
       "            fw.writerow(row + [label,lab_row[0]])\n",
+      "        \n",
+      "        if dbg: print \"end:   \"+str(lab_row[0])\n",
       "    return\n",
       "\n",
       "for i in sub_dict:\n",
@@ -259,165 +266,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Subject: 24\n",
-        "Subject: 25"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 13"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 27"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 20"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 21\n",
-        "Subject: 17"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 23\n",
-        "Subject: 19"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 18"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 30"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 28"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 29"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 26"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 1"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Reached end of data for subject1\n",
-        "Subject: 12"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Reached end of data for subject12\n",
-        "Subject: 5"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 4"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 7"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 9"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Subject: 10"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Reached end of data for subject10\n"
-       ]
-      }
-     ],
-     "prompt_number": 52
+     "outputs": [],
+     "prompt_number": 66
     },
     {
      "cell_type": "markdown",
