--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -31,7 +31,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -48,7 +48,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -241,12 +241,25 @@
       "    sub_dict = {i[1]: i[0] for i in temp_dat}\n",
       "    return sub_dict\n",
       "\n",
-      "subj_list = get_subject_list()"
+      "def get_data(subj_list):\n",
+      "    subj_data = {}\n",
+      "    for s_id in subj_list.keys():\n",
+      "        s_time = subj_list[s_id]\n",
+      "        s_file = s_time + \".\" + s_id + \".labelled.csv\"\n",
+      "        with open(join(SAVE_URL,s_file), 'rb') as fi:\n",
+      "            fr = csv.reader(fi,delimiter=\"\\t\")\n",
+      "            next(fr) #header\n",
+      "            s_data = list(fr)\n",
+      "            subj_data[s_id] = s_data\n",
+      "    return subj_data\n",
+      "\n",
+      "subj_list = get_subject_list()\n",
+      "subj_data = get_data(subj_list)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
