converted key of subj data dict to int

--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -250,7 +250,7 @@
       "            fr = csv.reader(fi,delimiter=\"\\t\")\n",
       "            next(fr) #header\n",
       "            s_data = list(fr)\n",
-      "            subj_data[s_id] = s_data\n",
+      "            subj_data[int(s_id)] = s_data\n",
       "    return subj_data\n",
       "\n",
       "subj_list = get_subject_list()\n",
@@ -259,7 +259,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -292,13 +292,7 @@
       "\n",
       "for i in range(3):\n",
       "    s1 = subj_list.keys()[i]\n",
-      "    t1 = subj_list[s1]\n",
-      "    f1 = t1+\".\"+s1+\".labelled.csv\"\n",
-      "    with open(join(SAVE_URL,f1), 'rb') as fi:\n",
-      "        fr = csv.reader(fi,delimiter=\"\\t\")\n",
-      "        next(fr) #header\n",
-      "        s_comb = list(fr)\n",
-      "        plot_subject(s_comb, \"Subject: \"+s1)"
+      "    "
      ],
      "language": "python",
      "metadata": {},
