--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -410,7 +410,8 @@
       "import pandas as pd\n",
       "import numpy as np\n",
       "\n",
-      "subj_id = 10\n",
+      "subj_id = 13\n",
+      "\n",
       "df = pd.DataFrame({'att':[int(i[2]) for i in cln_data[subj_id]],\n",
       "                    'med':[int(i[3]) for i in cln_data[subj_id]],\n",
       "                    'difficulty':[int(i[4]) for i in cln_data[subj_id]]})\n",
@@ -436,56 +437,56 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>0</th>\n",
-        "      <td> 88</td>\n",
+        "      <td> 81</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 50</td>\n",
-        "      <td> False</td>\n",
+        "      <td> 88</td>\n",
+        "      <td>  True</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
-        "      <td> 75</td>\n",
+        "      <td> 83</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 54</td>\n",
+        "      <td> 78</td>\n",
         "      <td>  True</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
-        "      <td> 64</td>\n",
+        "      <td> 75</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 38</td>\n",
-        "      <td> False</td>\n",
+        "      <td> 74</td>\n",
+        "      <td>  True</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td> 66</td>\n",
+        "      <td> 61</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 44</td>\n",
+        "      <td> 66</td>\n",
         "      <td>  True</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
-        "      <td> 63</td>\n",
+        "      <td> 69</td>\n",
         "      <td> 1</td>\n",
         "      <td> 53</td>\n",
-        "      <td>  True</td>\n",
+        "      <td> False</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 51,
+       "prompt_number": 79,
        "text": [
         "   att  difficulty  med is_train\n",
-        "0   88           1   50    False\n",
-        "1   75           1   54     True\n",
-        "2   64           1   38    False\n",
-        "3   66           1   44     True\n",
-        "4   63           1   53     True"
+        "0   81           1   88     True\n",
+        "1   83           1   78     True\n",
+        "2   75           1   74     True\n",
+        "3   61           1   66     True\n",
+        "4   69           1   53    False"
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -502,7 +503,7 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 70,
+       "prompt_number": 80,
        "text": [
         "RandomForestClassifier(bootstrap=True, compute_importances=False,\n",
         "            criterion='gini', max_depth=None, max_features='auto',\n",
@@ -512,18 +513,34 @@
        ]
       }
      ],
-     "prompt_number": 70
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from sklearn.metrics import classification_report\n",
       "preds = clf.predict(test[features])\n",
-      "pd.crosstab(test['difficulty'], preds, rownames=['actual'], colnames=['preds'])"
+      "print classification_report(test['difficulty'], preds)\n",
+      "pd.crosstab(test['difficulty'], preds, rownames=['actual'], colnames=['preds'])\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "             precision    recall  f1-score   support\n",
+        "\n",
+        "          1       0.55      0.62      0.59        66\n",
+        "          2       0.66      0.61      0.64        88\n",
+        "          3       0.00      0.00      0.00         5\n",
+        "\n",
+        "avg / total       0.59      0.60      0.59       159\n",
+        "\n"
+       ]
+      },
       {
        "html": [
         "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
@@ -534,11 +551,9 @@
         "      <th>1</th>\n",
         "      <th>2</th>\n",
         "      <th>3</th>\n",
-        "      <th>4</th>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>actual</th>\n",
-        "      <th></th>\n",
         "      <th></th>\n",
         "      <th></th>\n",
         "      <th></th>\n",
@@ -547,30 +562,20 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
-        "      <td> 35</td>\n",
-        "      <td> 47</td>\n",
-        "      <td> 4</td>\n",
-        "      <td> 4</td>\n",
+        "      <td> 41</td>\n",
+        "      <td> 25</td>\n",
+        "      <td> 0</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
-        "      <td> 50</td>\n",
-        "      <td> 51</td>\n",
-        "      <td> 4</td>\n",
-        "      <td> 2</td>\n",
+        "      <td> 31</td>\n",
+        "      <td> 54</td>\n",
+        "      <td> 3</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
         "      <td>  2</td>\n",
-        "      <td>  6</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td>  1</td>\n",
-        "      <td>  1</td>\n",
-        "      <td> 1</td>\n",
+        "      <td>  3</td>\n",
         "      <td> 0</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
@@ -578,18 +583,17 @@
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 71,
+       "prompt_number": 83,
        "text": [
-        "preds    1   2  3  4\n",
-        "actual              \n",
-        "1       35  47  4  4\n",
-        "2       50  51  4  2\n",
-        "3        2   6  1  0\n",
-        "4        1   1  1  0"
+        "preds    1   2  3\n",
+        "actual           \n",
+        "1       41  25  0\n",
+        "2       31  54  3\n",
+        "3        2   3  0"
        ]
       }
      ],
-     "prompt_number": 71
+     "prompt_number": 83
     },
     {
      "cell_type": "markdown",
