--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -403,6 +403,13 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Classifying for a single subject first"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -410,7 +417,7 @@
       "import pandas as pd\n",
       "import numpy as np\n",
       "\n",
-      "subj_id = 13\n",
+      "subj_id = 27\n",
       "\n",
       "df = pd.DataFrame({'att':[int(i[2]) for i in cln_data[subj_id]],\n",
       "                    'med':[int(i[3]) for i in cln_data[subj_id]],\n",
@@ -437,92 +444,80 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>0</th>\n",
-        "      <td> 81</td>\n",
+        "      <td> 44</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 88</td>\n",
+        "      <td> 40</td>\n",
         "      <td>  True</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
-        "      <td> 83</td>\n",
+        "      <td> 40</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 78</td>\n",
-        "      <td>  True</td>\n",
+        "      <td> 35</td>\n",
+        "      <td> False</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
-        "      <td> 75</td>\n",
+        "      <td> 41</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 74</td>\n",
-        "      <td>  True</td>\n",
+        "      <td> 35</td>\n",
+        "      <td> False</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td> 61</td>\n",
+        "      <td> 57</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 66</td>\n",
-        "      <td>  True</td>\n",
+        "      <td> 21</td>\n",
+        "      <td> False</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
-        "      <td> 69</td>\n",
+        "      <td> 66</td>\n",
         "      <td> 1</td>\n",
-        "      <td> 53</td>\n",
-        "      <td> False</td>\n",
+        "      <td> 30</td>\n",
+        "      <td>  True</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 79,
+       "prompt_number": 89,
        "text": [
         "   att  difficulty  med is_train\n",
-        "0   81           1   88     True\n",
-        "1   83           1   78     True\n",
-        "2   75           1   74     True\n",
-        "3   61           1   66     True\n",
-        "4   69           1   53    False"
+        "0   44           1   40     True\n",
+        "1   40           1   35    False\n",
+        "2   41           1   35    False\n",
+        "3   57           1   21    False\n",
+        "4   66           1   30     True"
        ]
       }
      ],
-     "prompt_number": 79
+     "prompt_number": 89
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "train, test = df[df['is_train']==True], df[df['is_train']==False]\n",
-      "features = df.columns[[0,2]]\n",
-      "\n",
-      "clf = RandomForestClassifier(n_jobs=2)\n",
-      "clf.fit(train[features], train['difficulty'])"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 80,
-       "text": [
-        "RandomForestClassifier(bootstrap=True, compute_importances=False,\n",
-        "            criterion='gini', max_depth=None, max_features='auto',\n",
-        "            min_density=0.1, min_samples_leaf=1, min_samples_split=2,\n",
-        "            n_estimators=10, n_jobs=2, oob_score=False, random_state=None,\n",
-        "            verbose=0)"
-       ]
-      }
-     ],
-     "prompt_number": 80
+     "source": [
+      "Divide the data into train and test. Fit the random forest model on train data"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "from sklearn.metrics import classification_report\n",
+      "\n",
+      "train, test = df[df['is_train']==True], df[df['is_train']==False]\n",
+      "features = df.columns[[0,2]]\n",
+      "\n",
+      "clf = RandomForestClassifier(n_jobs=2)\n",
+      "clf.fit(train[features], train['difficulty'])\n",
+      "\n",
       "preds = clf.predict(test[features])\n",
+      "\n",
       "print classification_report(test['difficulty'], preds)\n",
-      "pd.crosstab(test['difficulty'], preds, rownames=['actual'], colnames=['preds'])\n"
+      "pd.crosstab(test['difficulty'], preds, rownames=['actual'], colnames=['preds'])"
      ],
      "language": "python",
      "metadata": {},
@@ -533,11 +528,11 @@
        "text": [
         "             precision    recall  f1-score   support\n",
         "\n",
-        "          1       0.55      0.62      0.59        66\n",
-        "          2       0.66      0.61      0.64        88\n",
-        "          3       0.00      0.00      0.00         5\n",
+        "          1       0.56      0.47      0.51        88\n",
+        "          2       0.35      0.44      0.39        61\n",
+        "          3       0.33      0.30      0.32        10\n",
         "\n",
-        "avg / total       0.59      0.60      0.59       159\n",
+        "avg / total       0.47      0.45      0.45       159\n",
         "\n"
        ]
       },
@@ -563,37 +558,37 @@
         "    <tr>\n",
         "      <th>1</th>\n",
         "      <td> 41</td>\n",
-        "      <td> 25</td>\n",
-        "      <td> 0</td>\n",
+        "      <td> 46</td>\n",
+        "      <td> 1</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
-        "      <td> 31</td>\n",
-        "      <td> 54</td>\n",
-        "      <td> 3</td>\n",
+        "      <td> 29</td>\n",
+        "      <td> 27</td>\n",
+        "      <td> 5</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td>  2</td>\n",
         "      <td>  3</td>\n",
-        "      <td> 0</td>\n",
+        "      <td>  4</td>\n",
+        "      <td> 3</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "output_type": "pyout",
-       "prompt_number": 83,
+       "prompt_number": 95,
        "text": [
         "preds    1   2  3\n",
         "actual           \n",
-        "1       41  25  0\n",
-        "2       31  54  3\n",
-        "3        2   3  0"
+        "1       41  46  1\n",
+        "2       29  27  5\n",
+        "3        3   4  3"
        ]
       }
      ],
-     "prompt_number": 83
+     "prompt_number": 95
     },
     {
      "cell_type": "markdown",
