Added function for justis' num_words idea

--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -652,9 +652,9 @@
       "    to = Decimal(to.strftime('%s.%f'))\n",
       "    return str(to)\n",
       "    \n",
-      "def format_task_xls():\n",
+      "def get_num_words():\n",
       "    path_task_xls = DATA_URL + \"/task.xls\"\n",
-      "    path_task_xls_labels = SAVE_URL + \"/task_xls_labels.csv\"\n",
+      "    path_task_xls_labels = SAVE_URL + \"/task_xls_num_words.csv\"\n",
       "    \n",
       "    with open(path_task_xls, 'rb') as fi,\\\n",
       "    open(path_task_xls_labels, 'w') as fo:\n",
@@ -662,18 +662,23 @@
       "        fw = csv.writer(fo, delimiter='\\t')\n",
       "        \n",
       "        h = fr.next()\n",
-      "        fw.writerow(['taskid',h[0], h[1], h[2], h[3], h[-1]]) #header\n",
+      "        fw.writerow(['taskid', 'num_words_stim', 'num_words_block',h[0], h[1], 'time_diff', h[-1]]) #header\n",
       "        \n",
       "        for idx, row in enumerate(fr):\n",
       "            row[2] = format_time(row[2])\n",
       "            row[3] = format_time(row[3])\n",
-      "            fw.writerow([idx, row[0], row[1], row[2], row[3], row[-1]])\n",
+      "            \n",
+      "            time_diff = Decimal(row[3]) - Decimal(row[2])\n",
+      "            num_words_stim = len(row[4].split())\n",
+      "            num_words_block = len(row[5].split())\n",
+      "            fw.writerow([idx, num_words_stim, num_words_block, row[0], row[1], time_diff, row[-1]])\n",
       "\n",
-      "format_task_xls()"
+      "get_num_words()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 22
     }
    ],
    "metadata": {}
