Calculating it only for sentences

--- a/eeg_feature_extraction.ipynb
+++ b/eeg_feature_extraction.ipynb
@@ -675,14 +675,18 @@
       "        difficulty = [float(i) for i in data_cols[-1]]\n",
       "        time_diff = [float(Decimal(format_time(data_cols[3][i]))-\\\n",
       "                    Decimal(format_time(data_cols[2][i])))\\\n",
-      "                    for i in xrange(len(data_cols[0]))]\n",
+      "                    for i in xrange(l)]\n",
       "        \n",
       "        time_per_word = [time_diff[i]/num_words_stim[i] for i in range(l)]\n",
       "        time_per_char = [time_diff[i]/num_chars_stim[i] for i in range(l)]\n",
       "        \n",
+      "        sentence_idx=[i for i in xrange(l) if num_words_stim[i] > 1]\n",
+      "        \n",
       "        print pearsonr(time_per_word, difficulty)\n",
       "        print pearsonr(time_per_char, difficulty)\n",
-      "        #print pearsonr(num_chars_stim, time_diff)\n",
+      "\n",
+      "        print pearsonr([time_per_word[i] for i in sentence_idx], [difficulty[i] for i in sentence_idx])\n",
+      "        print pearsonr([time_per_char[i] for i in sentence_idx], [difficulty[i] for i in sentence_idx])\n",
       "\n",
       "\n",
       "get_num_words()"
@@ -695,16 +699,22 @@
        "stream": "stdout",
        "text": [
         "(0.39954572289607321, 4.7962634348368499e-152)\n",
-        "(0.52805066277565826, 6.1439118752796796e-284)\n"
+        "(0.52805066277565826, 6.1439118752796796e-284)\n",
+        "(0.1042932478927345, 1.4676898915448957e-07)\n",
+        "(-0.011311405571011842, 0.56964249492174535)\n"
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 50
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
      "metadata": {},
-     "source": []
+     "outputs": [],
+     "prompt_number": 36
     }
    ],
    "metadata": {}
