moving some stuff out of ipython notebook and into eegml.py

--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "eeg_data"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,18 +30,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Import config params\n",
-      "DATA_URL = ''\n",
-      "OUT_URL = ''\n",
-      "try:\n",
-      "   from dev_settings import *\n",
-      "except ImportError:\n",
-      "   pass"
+      "from eegml import *"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -71,50 +65,35 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "/home/sagar/Dropbox/Academics/nc_EDM/eeg_project/data/all\n",
-        "/home/sagar/Dropbox/Academics/nc_EDM/eeg_project/edm_eeg.git/preprocess/all\n"
+        "/home/justis/student/csc591/eeg_all\n",
+        "preprocess\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def format_time(ti):\n",
-      "    \"\"\"\n",
-      "    Converts format '2010-12-14 16:56:36.996' to Decimal\n",
-      "    \"\"\"\n",
-      "    to = datetime.strptime(ti, '%Y-%m-%d %H:%M:%S.%f')\n",
-      "    #Decimal not losing precision\n",
-      "    to = Decimal(to.strftime('%s.%f'))\n",
-      "    return str(to)\n",
-      "    \n",
-      "    \n",
-      "def format_task_xls():\n",
-      "    path_task_xls = DATA_URL + \"/task.xls\"\n",
-      "    path_task_xls_labels = SAVE_URL + \"/task_xls_labels.csv\"\n",
-      "    \n",
-      "    with open(path_task_xls, 'rb') as fi,\\\n",
-      "    open(path_task_xls_labels, 'w') as fo:\n",
-      "        fr = csv.reader(fi, delimiter='\\t')\n",
-      "        fw = csv.writer(fo, delimiter='\\t')\n",
-      "        \n",
-      "        h = fr.next()\n",
-      "        fw.writerow(['taskid',h[0], h[1], h[2], h[3], h[-1]]) #header\n",
-      "        \n",
-      "        for idx, row in enumerate(fr):\n",
-      "            row[2] = format_time(row[2])\n",
-      "            row[3] = format_time(row[3])\n",
-      "            fw.writerow([idx, row[0], row[1], row[2], row[3], row[-1]])\n",
-      "\n",
       "format_task_xls()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "global name 'DATA_URL' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-14-fd422dca2f4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mformat_task_xls\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m/home/justis/src/edm_eeg/eegml.py\u001b[0m in \u001b[0;36mformat_task_xls\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \"\"\"\n\u001b[0;32m     11\u001b[0m     \u001b[0mto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mti\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%Y-%m-%d %H:%M:%S.%f'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[1;31m#Decimal not losing precision\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s.%f'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: global name 'DATA_URL' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -128,35 +107,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def compress_time_labels(file_name):\n",
-      "    \"\"\"\n",
-      "    Combines contiguous time windows\n",
-      "    with same difficulty label\n",
-      "    \"\"\"\n",
-      "    with open(file_name, 'rb') as fi,\\\n",
-      "    open(\"./preprocess/task_xls_labels_compress.csv\", 'w') as fo:\n",
-      "        fr = csv.reader(fi, delimiter='\\t')\n",
-      "        fw = csv.writer(fo, delimiter='\\t')\n",
-      "        fw.writerow(fr.next()) #header\n",
-      "        \n",
-      "        row1 = fr.next()\n",
-      "        t_id =row1[0]\n",
-      "        t_s = row1[1]\n",
-      "        t_e = row1[2]\n",
-      "        lab = row1[3]\n",
-      "        \n",
-      "        for row in fr: #row 2 onwards\n",
-      "            if row[3] == lab:\n",
-      "                t_e = row[2]\n",
-      "            else:\n",
-      "                fw.writerow([str(t_id),str(t_s), str(t_e), lab])\n",
-      "                t_id =row[0]\n",
-      "                t_s = row[1]\n",
-      "                t_e = row[2]\n",
-      "                lab = row[3]\n",
-      "        fw.writerow([str(t_id),str(t_s), str(t_e), lab]) #last row\n",
-      "                \n",
-      "\n",
       "compress_time_labels(\"./preprocess/task_xls_labels.csv\")"
      ],
      "language": "python",
