--- a/eeg_data.ipynb
+++ b/eeg_data.ipynb
@@ -129,59 +129,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "###Plotting 1Hz data"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "with open(\"preprocess/combined_label_uncompress.csv\", 'rb') as fi:\n",
-      "    fr = csv.reader(fi, delimiter='\\t')\n",
-      "    next(fr)\n",
-      "    a = list(fr)\n",
-      "    \n",
-      "    fig, ax = plt.subplots()\n",
-      "    x_ax = [int(i[0].split('.')[0]) for i in a]\n",
-      "    \n",
-      "    sig_q = [int(i[1]) for i in a]\n",
-      "    atten = [int(i[2]) for i in a]\n",
-      "    medit = [int(i[3]) for i in a]\n",
-      "    diffi = [int(i[4])*25 for i in a]\n",
-      "    taskid= [int(i[5]) for i in a]\n",
-      "    \n",
-      "    #print x_ax\n",
-      "    #ax.plot(x_ax,sig_q, label='Quality')\n",
-      "    ax.plot(x_ax, atten, label='Attention')\n",
-      "    ax.plot(x_ax, medit, label='Meditation')\n",
-      "    ax.plot(x_ax, diffi, label='Difficulty')\n",
-      "    ax.plot(x_ax, taskid, label='taskid')\n",
-      "    \n",
-      "    ax.grid(True)\n",
-      "    fig.tight_layout()\n",
-      "    plt.legend(loc='upper left')\n",
-      "    plt.show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "IOError",
-       "evalue": "[Errno 2] No such file or directory: 'preprocess/combined_label_uncompress.csv'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-6-5938304aca06>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"preprocess/combined_label_uncompress.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mfr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\t'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'preprocess/combined_label_uncompress.csv'"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "## Label 512 Hz data"
      ]
     },
@@ -189,84 +136,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Create raw file with incremental miliseconds\n",
-      "with open(\"../data/eeg_sample/20101214163931.a.rawwave.csv\",'rb') as fi,\\\n",
-      "open(\"preprocess/raw_incremental.csv\",'w') as fo:\n",
-      "    fr = csv.reader(fi, delimiter=',')\n",
-      "    fw = csv.writer(fo, delimiter=',')\n",
-      "    \n",
-      "    fw.writerow(next(fr))#header\n",
-      "    \n",
-      "    c=0.0\n",
-      "    prev_time = '100'#dummy\n",
-      "    for row in fr:\n",
-      "        if row[0]==prev_time:\n",
-      "            c = c + 0.001\n",
-      "        else:\n",
-      "            c = 0.0\n",
-      "            prev_time = row[0]\n",
-      "        fw.writerow([row[0] + '.' + str(c).split('.')[1], row[1]])\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "IOError",
-       "evalue": "[Errno 2] No such file or directory: '../data/eeg_sample/20101214163931.a.rawwave.csv'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-9-0b742a9783ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create raw file with incremental miliseconds\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../data/eeg_sample/20101214163931.a.rawwave.csv\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"preprocess/raw_incremental.csv\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfo\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mfr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mfw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: '../data/eeg_sample/20101214163931.a.rawwave.csv'"
-       ]
-      }
-     ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def label_data_raw_signal(in_file, compressed_label_file, out_file):\n",
-      "    with open(in_file, 'rb') as fi,\\\n",
-      "    open(compressed_label_file, 'rb') as fi2,\\\n",
-      "    open(out_file, 'w') as fo:\n",
-      "        \n",
-      "        day = '2010-12-14' #later, parse from file name\n",
-      "        fr1 = csv.reader(fi,  delimiter=',') # combined.csv\n",
-      "        fr2 = csv.reader(fi2, delimiter='\\t')# labels_compress.csv\n",
-      "        fw  = csv.writer(fo,  delimiter='\\t')# combined_label.csv\n",
-      "        \n",
-      "        #headers\n",
-      "        fw.writerow(next(fr1, None) + ['Difficulty', 'TaskId'])\n",
-      "        next(fr2, None)\n",
-      "        \n",
-      "        lab_row = fr2.next()\n",
-      "        for row in fr1:\n",
-      "            row[0] = datetime.strptime(day+' '+row[0],\\\n",
-      "                            '%Y-%m-%d %H:%M:%S.%f').strftime('%s.%f')\n",
-      "            if Decimal(row[0]) < Decimal(lab_row[1]): # t < start_time\n",
-      "                label = -1\n",
-      "                fw.writerow(row + [label, lab_row[0]])\n",
-      "                continue\n",
-      "                \n",
-      "            if Decimal(row[0]) < Decimal(lab_row[2]): # t < end_time\n",
-      "                label = lab_row[3]\n",
-      "                fw.writerow(row + [label, lab_row[0]])\n",
-      "                continue\n",
-      "            \n",
-      "            while Decimal(row[0] > lab_row[2]): # t > end_time\n",
-      "                try:\n",
-      "                    lab_row = next(fr2)\n",
-      "                    label = lab_row[3]\n",
-      "                except: # reached end of file\n",
-      "                    label = -1\n",
-      "                    break\n",
-      "            fw.writerow(row + [label, lab_row[0]])\n",
-      "    return\n",
-      "\n",
+      "create_raw_incremental(DATA_URL + \"/20101214163931.a.rawwave.csv\", \"preprocess/raw_incremental.csv\")\n",
       "label_data_raw_signal(\"preprocess/raw_incremental.csv\",\n",
-      "            \"preprocess/task_xls_labels_compress.csv\",\n",
+      "            \"preprocess/task_xls_labels.csv\",\n",
       "            \"preprocess/raw_incremental_label.csv\")"
      ],
      "language": "python",
@@ -278,15 +150,15 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mInvalidOperation\u001b[0m                          Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-10-7f7bfca304f2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     36\u001b[0m label_data_raw_signal(\"preprocess/raw_incremental.csv\",\n\u001b[0;32m     37\u001b[0m             \u001b[1;34m\"preprocess/task_xls_labels_compress.csv\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m             \"preprocess/raw_incremental_label.csv\")\n\u001b[0m",
-        "\u001b[1;32m<ipython-input-10-7f7bfca304f2>\u001b[0m in \u001b[0;36mlabel_data_raw_signal\u001b[1;34m(in_file, compressed_label_file, out_file)\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfr1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m                            \u001b[1;34m'%Y-%m-%d %H:%M:%S.%f'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s.%f'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlab_row\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# t < start_time\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m                 \u001b[0mlabel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m                 \u001b[0mfw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlab_row\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-7-ec9eb20b7b9b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m label_data_raw_signal(\"preprocess/raw_incremental.csv\",\n\u001b[0;32m      2\u001b[0m             \u001b[1;34m\"preprocess/task_xls_labels.csv\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m             \"preprocess/raw_incremental_label.csv\")\n\u001b[0m",
+        "\u001b[1;32m/home/justis/src/edm_eeg/eegml.py\u001b[0m in \u001b[0;36mlabel_data_raw_signal\u001b[1;34m(in_file, compressed_label_file, out_file)\u001b[0m\n\u001b[0;32m    145\u001b[0m             row[0] = datetime.strptime(day+' '+row[0],\\\n\u001b[0;32m    146\u001b[0m                             '%Y-%m-%d %H:%M:%S.%f').strftime('%s.%f')\n\u001b[1;32m--> 147\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlab_row\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# t < start_time\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    148\u001b[0m                 \u001b[0mlabel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m                 \u001b[0mfw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlab_row\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;32m/usr/lib/python2.7/decimal.pyc\u001b[0m in \u001b[0;36m__new__\u001b[1;34m(cls, value, context)\u001b[0m\n\u001b[0;32m    546\u001b[0m                     \u001b[0mcontext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetcontext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    547\u001b[0m                 return context._raise_error(ConversionSyntax,\n\u001b[1;32m--> 548\u001b[1;33m                                 \"Invalid literal for Decimal: %r\" % value)\n\u001b[0m\u001b[0;32m    549\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    550\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'sign'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"-\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;32m/usr/lib/python2.7/decimal.pyc\u001b[0m in \u001b[0;36m_raise_error\u001b[1;34m(self, condition, explanation, *args)\u001b[0m\n\u001b[0;32m   3864\u001b[0m         \u001b[1;31m# Errors should only be risked on copies of the context\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3865\u001b[0m         \u001b[1;31m# self._ignored_flags = []\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3866\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexplanation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3867\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3868\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_ignore_all_flags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;31mInvalidOperation\u001b[0m: Invalid literal for Decimal: 'a'"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
